# acoustic-api

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: main-cicd.yml  pr-workflow.yml
k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
k8s/test/: kustomization.yaml
src/: main.py  settings.py
src/paid_media/: acoustic.py
src/utils/: sql_utils.py  utils.py
